# DemoKAI

./: .gitignore  README.md
Tests/MLconfigs/: FD-OpenCV.json  MLConfig.json  MLConfig_FD-FFP-MO.json  MLConfig_FD-FFP-SMO-EG.json  MLConfig_FD-FFP-SMO.json  MLConfig_FD-FFP.json  MLConfig_FD.json  MLConfig_FDFF.json  MLConfig_FD_container.json
src/: build.sh  build_minimal.sh  compose.yml
src/KAI/: CMakeLists.txt  Demo.py  DemoFaceDetector_opencvdnn.ipynb  Dockerfile  Dockerfile_minimal  EyeglassesDetector.cpp  EyeglassesDetector.h  FaceDetector.cpp  FaceDetector.h  FaceMeshKeypoints.h  FacePoseEstimator.cpp  FacePoseEstimator.h  FacialFeatureDetector.cpp  FacialFeatureDetector.h  FacialFeatures.h  Image.h  KAI-impl.cpp  KAITaskInterface.h  KAITaskManager.cpp  KAITaskManager.h  KAITaskPipeline.cpp  KAITaskPipeline.h  Logger.cpp  Logger.h  MLConfigLoader.h  MouthOpenDetector.cpp  MouthOpenDetector.h  SmileDetector.cpp  SmileDetector.h  TFLiteFacialFeatureDetector.cpp  TFLiteFacialFeatureDetector.h  Types.h  argparser.h  requirements.txt
